Fixed the tree zoom bug

--- a/src/main/resources/templates/AboutUs/AboutUs.html
+++ b/src/main/resources/templates/AboutUs/AboutUs.html
@@ -85,21 +85,22 @@
 <div id="test">
 </div>
 
-  </div>
-<h2 id="textCenter" style="text-align: center">Vår vision med loppisshoppis.....</h2>
+<h2 id="textCenter" style="text-align: center;">Vår vision med loppisshoppis.....</h2>
 
-<p id="textCenter2"style="text-align: center" >Vår butik värnar om miljö och produktsvinn</p>
+<p id="textCenter2" style="text-align: center;" >Vår butik värnar om miljö och produktsvinn</p>
 
-
-<div class="zoom-in-out-box"style="text-align: center">
+<div class="container" id="tree-container">
+  <div class="zoom-in-out-box" id="imgtree" style="text-align: center;">
     <img onclick="location.href='/';" src="/images/tree2.png" id="treeimg" height="300" >
   </div>
-</div><br><br>
-<div id="test">
+</div>
+
+
+<div id="test2">
 </div>
 
 <!-- Footer -->
-<footer class="container-fluid text-center" style="position:absolute; bottom:50px;" >
+<footer class="container-fluid text-center">
   <p>Bli en återvinnare!</p>
   <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
     <input type="email" class="form-control" size="50" placeholder="Mejladress">
