--- a/src/main/resources/templates/Clothes/Women.html
+++ b/src/main/resources/templates/Clothes/Women.html
@@ -39,33 +39,14 @@
     </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                Varan tillagd i varukorgen!
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fortsätt shoppa</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-        </div>
-    </div>
-</div>
-
 <!-- Header with logo -->
 <div class="jumbotron">
     <div class="container text-center">
         <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
     </div>
 </div>
+
+<span class="logintxt">Inloggad som:<span th:text="${session?.siteuser?.username} ?: ' (Inte inloggad)'"></span></span>
 
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
@@ -80,28 +61,28 @@
         </div>
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder & Skor <span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder & Skor<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/Clothes/allClothes">Allt inom Kläder & Skor</a></li>
-                        <li><a href="/Clothes/Women">Dam</a></li>
-                        <li><a href="/Clothes/Men">Herr</a></li>
-                        <li><a href="/Clothes/Children">Barn</a></li>
+                        <li><a href="/Clothes/Women">Damkläder & Skor</a></li>
+                        <li><a href="/Clothes/Men">Herrkläder & Skor</a></li>
+                        <li><a href="/Clothes/Children">Barnkläder & Skor</a></li>
                     </ul>
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hemmet<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/Home/allHome">Allt för Hemmet</a></li>
                         <li><a href="/Home/homeDecor">Inredning</a></li>
                         <li><a href="/Home/electronics">Hemelektronik</a></li>
-                        <li><a href="Home/kitchenSupplies">Husgeråd</a></li>
+                        <li><a href="/Home/kitchenSupplies">Husgeråd</a></li>
                     </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/Books/allBooks">Alla Böcker</a></li>
                         <li><a href="/Books/childrensBooks">Barnböcker</a></li>
                         <li><a href="/Books/non-fiction">Facklitteratur</a></li>
                         <li><a href="/Books/fiction">Skönlitteratur</a></li>
                     </ul>
-                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid <span class="caret"></span></a>
+                <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/Hobby/allHobbies">Allt inom Hobby & Fritid</a></li>
                         <li><a href="/Hobby/hobbiesAndGames">Hobby & Spel</a></li>
@@ -109,7 +90,6 @@
                         <li><a href="/Hobby/sport">Sport & Fritid </a></li>
                         <li><a href="/Hobby/toys">Leksaker</a></li>
                     </ul>
-
                 <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/AboutUs/AboutUs">Vår vision</a></li>
@@ -117,9 +97,8 @@
                         <li><a href="/AboutUs/faq">Vanliga frågor</a></li>
                     </ul>
             </ul>
-
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
+                <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
                 <li><a><span id="cartsum" class="productsummation productcounter">0</span></a></li>
                 <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
             </ul>
