--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -45,6 +45,8 @@
   </div>
 </div>
 
+<span class="logintxt">Inloggad som:<span th:text="${session?.siteuser?.username} ?: ' (Inte inloggad)'"></span></span>
+
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
@@ -58,28 +60,28 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder & Skor <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Kläder & Skor<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/Clothes/allClothes">Allt inom Kläder & Skor</a></li>
-            <li><a href="/Clothes/Women">Dam</a></li>
-            <li><a href="/Clothes/Men">Herr</a></li>
-            <li><a href="/Clothes/Children">Barn</a></li>
+            <li><a href="/Clothes/Women">Damkläder & Skor</a></li>
+            <li><a href="/Clothes/Men">Herrkläder & Skor</a></li>
+            <li><a href="/Clothes/Children">Barnkläder & Skor</a></li>
           </ul>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hemmet<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/Home/allHome">Allt för Hemmet</a></li>
             <li><a href="/Home/homeDecor">Inredning</a></li>
             <li><a href="/Home/electronics">Hemelektronik</a></li>
-            <li><a href="Home/kitchenSupplies">Husgeråd</a></li>
+            <li><a href="/Home/kitchenSupplies">Husgeråd</a></li>
           </ul>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Böcker<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/Books/allBooks">Alla Böcker</a></li>
             <li><a href="/Books/childrensBooks">Barnböcker</a></li>
             <li><a href="/Books/non-fiction">Facklitteratur</a></li>
             <li><a href="/Books/fiction">Skönlitteratur</a></li>
           </ul>
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid <span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Hobby & Fritid<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/Hobby/allHobbies">Allt inom Hobby & Fritid</a></li>
             <li><a href="/Hobby/hobbiesAndGames">Hobby & Spel</a></li>
@@ -87,7 +89,6 @@
             <li><a href="/Hobby/sport">Sport & Fritid </a></li>
             <li><a href="/Hobby/toys">Leksaker</a></li>
           </ul>
-
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Om oss <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/AboutUs/AboutUs">Vår vision</a></li>
@@ -96,7 +97,7 @@
           </ul>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
+        <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
         <li><a><span id="cartsum" class="productsummation productcounter">0</span></a></li>
         <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
       </ul>
