Headers & tab headers on all pages

--- a/src/main/resources/templates/Clothes/Children.html
+++ b/src/main/resources/templates/Clothes/Children.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Kläder & Skor - Barn</title>
+  <title>Barnkläder & Skor</title>
   <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -106,7 +106,7 @@
   </div>
 </nav>
 
-<div class="page-header"><h1>Barnkläder och barnskor</h1></div>
+<div class="page-header"><h1>Barnkläder & Skor</h1></div>
 
 <div class="container">
   <div class="row">
