--- a/src/main/resources/templates/Hobby/moviesAndMusic.html
+++ b/src/main/resources/templates/Hobby/moviesAndMusic.html
@@ -106,6 +106,8 @@
   </div>
 </nav>
 
+<div class="page-header"><h1>Film & Musik</h1></div>
+
 <div class="container">
   <div class="row">
     <div class="productlisting" th:each="product : ${products}">
