--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -81,6 +81,8 @@
     </div>
 </nav>
 
+<div class="page-header"><h1>Varukorgen</h1></div>
+
 <!-- Cart -->
 <div class="container">
     <div class="fulllistofproducts">
