--- a/src/main/resources/templates/newuser.html
+++ b/src/main/resources/templates/newuser.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>LoppisShoppis</title>
+    <title>Skapa ny användare</title>
     <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,6 +104,8 @@
         </div>
     </div>
 </nav>
+
+<div class="page-header"><h1>Skapa ny användare</h1></div>
 
 <!-- New user -->
 <form action="/newuser" method="POST" th:object="${user}">
