--- a/src/main/resources/templates/Clothes/Men.html
+++ b/src/main/resources/templates/Clothes/Men.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Herrkläder</title>
+    <title>Herrkläder & Skor</title>
     <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -107,7 +107,7 @@
     </div>
 </nav>
 
-<div class="page-header"><h1>Herrkläder och herrskor</h1></div>
+<div class="page-header"><h1>Herrkläder & Skor</h1></div>
 
 <div class="container">
     <div class="row">
