--- a/src/main/resources/templates/Hobby/allHobbies.html
+++ b/src/main/resources/templates/Hobby/allHobbies.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Allt inom hobby & fritid</title>
+  <title>Allt inom Hobby & Fritid</title>
   <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -106,7 +106,7 @@
   </div>
 </nav>
 
-<div class="page-header"><h1>Allt inom hobby och fritid</h1></div>
+<div class="page-header"><h1>Allt inom Hobby & Fritid</h1></div>
 
 <div class="container">
   <div class="row">
