--- a/src/main/resources/templates/Home/homeDecor.html
+++ b/src/main/resources/templates/Home/homeDecor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Inredning</title>
   <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -105,6 +105,8 @@
     </div>
   </div>
 </nav>
+
+<div class="page-header"><h1>Inredning</h1></div>
 
 <div class="container">
   <div class="row">
