--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>LoppisShoppis</title>
+    <title>Logga in</title>
     <link rel="icon" type="image/x-icon" href="/images/logga-liten-ljus.svg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -104,6 +104,8 @@
         </div>
     </div>
 </nav>
+
+<div class="page-header"><h1>Logga in</h1></div>
 
 <form action="/login" th:method="POST">
     <label for="user">Användarnamn</label>
