--- a/src/main/resources/templates/AboutUs/faq.html
+++ b/src/main/resources/templates/AboutUs/faq.html
@@ -105,50 +105,62 @@
 
 <div class="page-header"><h1>Vanliga frågor</h1></div>
 
-<div class="faq">
-  <h2>Allmänna frågor</h2>
-  <h3>Hur kommer jag i kontakt med er?</h3>
+<div class="container" id="faq">
+  <h3>Allmänna frågor</h3>
+  <h4>Hur kommer jag i kontakt med er?</h4>
   <p>
     Lättaste sättet att kontakta oss är via vårt <a href="/AboutUs/contact">kontaktformulär</a>.
     Du är alltid varmt välkommen att skriva till oss.
     Vi återkommer till dig inom 2 vardagar, via den e-postadress du angav i formuläret.
   </p>
-  <h2>Leverans</h2>
-  <h3>Hur lång tid tar det att få hem min beställning?</h3>
+  <br>
+  <h3>Leverans</h3>
+  <h4>Hur lång tid tar det att få hem min beställning?</h4>
   <p>
     Vi gör allt för att du ska få hem din vara så snabbt som möjligt!
     Gör du din beställning innan kl 13.00 på en vardag skickas den samma dag, annars efterföljande vardag.
     Frakten tar vanligtvis 2-3 vardagar.
     Du kan alltid följa din vara via länken du får i ditt bekräftelse-mail vid beställningen.
   </p>
-  <h2>Skicka in varor</h2>
-  <h3>Hur gör man för att skicka in varor till er?</h3>
+  <br>
+  <h3>Skicka in varor</h3>
+  <h4>Hur gör man för att skicka in varor till er?</h4>
   <p>
     Vad roligt att du vill bidra till en mer hållbar planet! Kontakta oss via vårt <a href="/AboutUs/contact">kontaktformulär</a>.
-    Där kan du välja ärendet "Skicka in varor".
+    Där kan du välja ärendet "Skicka in varor"...
   </p>
-  <h3>I vilket skick ska varan jag skickar in vara i?</h3>
+  <br>
+  <h4>I vilket skick ska varan jag skickar in vara i?</h4>
   <p>
     Du kan skicka in allt du vill bli av med! Vi reparerar det som inte är i tillräckligt bra skick för att sälja direkt.
     Om det inte går att reparera återvinner vi varan. Oavsett får du en bonus som tack för ditt bidrag till en mer hållbar värld!
   </p>
-  <h3>Vad händer om min vara inte blir såld?</h3>
+  <br>
+  <h4>Vad händer om min vara inte blir såld?</h4>
   <p>
     I de fall varan inte blir såld och vi behöver sortera ut den ur vårt sortiment, kontaktar vi säljaren.
     Du som säljare får då 48 timmar på dig att meddela oss om du vill ha tillbaka varan.
     I annat fall doneras den till välgörenhet.
   </p>
-  <h2>Retur</h2>
-  <h3>Hur lång tid tar det att få hem min beställning?</h3>
+  <br>
+  <h3>Miljö & Hållbarhet</h3>
+  <h4>Är det miljövänligt att handla på LoppisShoppis?</h4> <!--Följande är i princip copy paste från Secondhand.se-->
   <p>
-
+    På LoppisShoppis säljer vi varor som är begagnade. Det innebär att de får en ny chans hos dig eller någon annan istället för att hamna på sopberget.
+    Vi tror på att återbruk är en viktig nyckel till en mer hållbar värld.<br>
+    Genom att minska på nyproduktionen av varor så minskar vi också på den negativa miljöpåverkan som nya varor medför.<br>
+    <br>Att handla second hand är ett enkelt sätt att vara klimatsmart!<br><br>
+    Våra förpackningar är FSC-märkta och tillverkade i Sverige. Vår leverantör av förpackningar klimatkompenserar för sina utsläpp genom trädplantering, bland annat i Sydamerika.<br>
+    <br>Här kommer några tips om hur du handlar extra klimatsmart hos oss på LoppisShoppis:
+    <br>
+    <br>
+    - Köp flera saker samtidigt
+    <br>
+    - Undvik returer
+    <br>
+    - Undvik ta bilen till uthämtningsstället
   </p>
-  <h2>Reklamation</h2>
-  <h3>Hur lång tid tar det att få hem min beställning?</h3>
-  <p>
-    Vi gör allt för att du ska få hem din vara så snabbt som möjligt!
-  </p>
-
+  <br>
 </div>
 
 <div id="test2"></div>
