--- a/src/main/resources/templates/Books/non-fiction.html
+++ b/src/main/resources/templates/Books/non-fiction.html
@@ -98,8 +98,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
-        <li><a><span id="cartsum" class="productsummation productcounter">0</span></a></li>
-        <li><a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a></li>
+        <li id="navbar-cart-duo">
+          <a><span id="cartsum" class="productsummation productcounter">0</span></a>
+          <a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a>
+        </li>
       </ul>
     </div>
   </div>
