New footer added

--- a/src/main/resources/templates/Home/kitchenSupplies.html
+++ b/src/main/resources/templates/Home/kitchenSupplies.html
@@ -135,12 +135,29 @@
 <div id="test">
 </div>
 
-<footer class="container-fluid text-center">
-    <p>Bli en återvinnare!</p>
-    <form class="form-inline">Anmäl dig till vårt nyhetsbrev:
-        <input type="email" class="form-control" size="50" placeholder="Mejladress">
-        <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
-    </form>
+<!-- Footer -->
+<footer>
+    <div class="footeritems">
+        <div class="footerlinks">
+            <h5>Om oss: </h5>
+            <ul>
+                <li><a href="/AboutUs/AboutUs">Vår vision</a></li>
+                <li><a href="/AboutUs/contact">Kontakta oss</a></li>
+                <li><a href="/AboutUs/faq">Vanliga frågor</a></li>
+            </ul>
+        </div>
+        <div class="container-fluid text-center">
+            <p>Bli en återvinnare! <br> Anmäl dig till vårt nyhetsbrev: </p>
+            <form class="form-inline"><input type="email" class="form-control" size="50" placeholder="E-postadress">
+                <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
+            </form>
+        </div>
+        <div class="footer-right">
+            <img src="/images/logga-liten-ljus.svg" id="footerlogo" onclick="location.href='/'">
+            <br>
+            <a href="/">© LoppisShoppis</a>
+        </div>
+    </div>
 </footer>
 
 <script src="/shoppingcart.js"></script>
