--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -120,5 +120,32 @@
     </div>
 </div>
 
+<!-- Footer -->
+<footer>
+    <div class="footeritems">
+        <div class="footerlinks">
+            <h5>Om oss: </h5>
+            <ul>
+                <li><a href="/AboutUs/AboutUs">Vår vision</a></li>
+                <li><a href="/AboutUs/contact">Kontakta oss</a></li>
+                <li><a href="/AboutUs/faq">Vanliga frågor</a></li>
+            </ul>
+        </div>
+        <div class="container-fluid text-center">
+            <p>Bli en återvinnare! <br> Anmäl dig till vårt nyhetsbrev: </p>
+            <form class="form-inline"><input type="email" class="form-control" size="50" placeholder="E-postadress">
+                <button type="button" class="btn btn-danger" id="footerbtn" >Skicka</button>
+            </form>
+        </div>
+        <div class="footer-right">
+            <img src="/images/logga-liten-ljus.svg" id="footerlogo" onclick="location.href='/'">
+            <br>
+            <a href="/">© LoppisShoppis</a>
+        </div>
+    </div>
+</footer>
+
+<script src="/shoppingcart.js"></script>
+
 </body>
 </html>
