--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -68,6 +68,18 @@ body {
     color: #f2f2f2;
 }
 
+.loginstatus {
+    border-style: solid;
+    border-color: #3190B5;
+    background-color: #3190B5;
+    color: white;
+    padding: 3px;
+    border-radius: 15px 5px 0px 0px;
+    position: absolute;
+    right: 0px;
+    top: -32px;
+}
+
 /* Body */
 
 .page-header {
