--- a/src/main/resources/templates/newuser.html
+++ b/src/main/resources/templates/newuser.html
@@ -114,7 +114,9 @@
 <form action="/newuser" method="POST" th:object="${user}">
     <table><div>
         <th class="userInput"> Användarnamn: <input type="text" th:field="*{username}"/>
+        <p class="error" th:if="${#fields.hasErrors('username')}">Fyll i ett namn!</p></th>
         <th class="userInput"> Lösenord:     <input type="password" th:field="*{password}"/>
+        <p class="error" th:if="${#fields.hasErrors('password')}">Fyll i ett lösenord!</p></th>
         <th class="userInput"> <input type="submit"/></th>
     </div></table>
 </form>
