--- a/src/main/resources/templates/AboutUs/faq.html
+++ b/src/main/resources/templates/AboutUs/faq.html
@@ -15,22 +15,24 @@
 </head>
 <body>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal: Newsletter Signup notification -->
+<div class="modal fade" id="newsletterModal" tabindex="-1" role="dialog" aria-labelledby="newsletterModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på ShoppisLoppis nyhetsbrev! </h4>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        Varan tillagd i varukorgen!
+      <div class="newsletterSignup">
+        <ul>
+          Vårt nyhetsbrev skickas ut till dig i början av varje månad.<br>
+          Håll utkik i inkorgen för den e-postadress du angav!
+        </ul>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Fortsätt shoppa</button>
       </div>
     </div>
   </div>
