--- a/src/main/resources/templates/Books/non-fiction.html
+++ b/src/main/resources/templates/Books/non-fiction.html
@@ -38,6 +38,29 @@
   </div>
 </div>
 
+<!-- Modal: Newsletter Signup notification -->
+<div class="modal fade" id="newsletterModal" tabindex="-1" role="dialog" aria-labelledby="newsletterModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på ShoppisLoppis nyhetsbrev! </h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="newsletterSignup">
+        <ul>
+          Vårt nyhetsbrev skickas ut till dig i början av varje månad.<br>
+          Håll utkik i inkorgen för den e-postadress du angav!
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Fortsätt shoppa</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Header with logo -->
 <div class="jumbotron">
   <div class="container text-center">
