--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -13,13 +13,36 @@
   </style>
 </head>
 <body>
+
+<!-- Modal: Newsletter Signup notification -->
+<div class="modal fade" id="newsletterModal" tabindex="-1" role="dialog" aria-labelledby="newsletterModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="newsletterModalLabel"> Grattis! Du prenumererar nu på ShoppisLoppis nyhetsbrev! </h4>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="newsletterSignup">
+        <ul>
+          Vårt nyhetsbrev skickas ut till dig i början av varje månad.<br>
+          Håll utkik i inkorgen för den e-postadress du angav!
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Fortsätt shoppa</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Header with logo -->
 <div class="jumbotron">
   <div class="container text-center">
     <img onclick="location.href='/';" src="/images/loppisshoppis3.png" height="300">
   </div>
 </div>
-
 
 <!-- Navbar -->
 <nav class="navbar navbar-inverse">
@@ -115,7 +138,7 @@
             <h3>Leveransadress</h3>
             <label for="fname"><i class="fa fa-user"></i> För- och efternamn</label>
             <input type="text" id="fname" name="firstname" placeholder="Namn Namnsson">
-            <label for="email"><i class="fa fa-envelope"></i> Email</label>
+            <label for="email"><i class="fa fa-envelope"></i> E-postadress</label>
             <input type="text" id="email" name="email" placeholder="namn@mail.com">
             <label for="adr"><i class="fa fa-address-card-o"></i> Adress</label>
             <input type="text" id="adr" name="address" placeholder="Storgatan 15A">
