"Mitt konto" href -> userpage

--- a/src/main/resources/templates/Clothes/Men.html
+++ b/src/main/resources/templates/Clothes/Men.html
@@ -122,7 +122,7 @@
                     </ul>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/login"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
+                <li><a href="/userpage"><span class="glyphicon glyphicon-user"></span> Mitt konto</a></li>
                 <li id="navbar-cart-duo">
                     <a><span id="cartsum" class="productsummation productcounter">0</span></a>
                     <a href="/cart"><span class="glyphicon glyphicon-shopping-cart"></span> Varukorg</a>
