lagt in ny bekräftelse sida, lagt in mappning i controller.

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -131,7 +131,7 @@
 
   <div class="col-75">
     <div class="container-form">
-      <form action="/action_page.php">
+      <form action="buyconfirmation">
 
         <div class="checkout-row">
           <div class="col-50">
@@ -178,7 +178,7 @@
 
 
         </div>
-        <input type="submit" value="Bekräfta köp" class="btn" >
+        <input href="buyconfirmation" type="submit" value="Bekräfta köp" class="btn" >
       </form>
     </div>
   </div>
