Fler annonser i Inredning Styling på login.html

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -475,3 +475,9 @@ tr.spaceOver>td {
 .font-weight-bold{
     font-weight: bold;
 }
+
+/****** Styling for login page *****/
+
+#login {
+    text-align: center;
+}
