Info update (FAQ & Product)

--- a/src/main/resources/templates/AboutUs/faq.html
+++ b/src/main/resources/templates/AboutUs/faq.html
@@ -122,7 +122,8 @@
   <h4>Hur lång tid tar det att få hem min beställning?</h4>
   <p>
     Vi gör allt för att du ska få hem din vara så snabbt som möjligt!
-    Gör du din beställning innan kl 13.00 på en vardag skickas den samma dag, annars efterföljande vardag.
+    Det brukar ta 3-5 dagar från beställning till dess att du kan hämta ut den.
+    Gör du din beställning innan kl 15.00 skickar vi varan samma dag, annars efterföljande dag.
     Frakten tar vanligtvis 2-3 vardagar.
     Du kan alltid följa din vara via länken du får i ditt bekräftelse-mail vid beställningen.
   </p>
