--- a/src/main/resources/templates/AboutUs/AboutUs.html
+++ b/src/main/resources/templates/AboutUs/AboutUs.html
@@ -112,9 +112,19 @@
 <div id="test">
 </div>
 
-<h2 id="textCenter" style="text-align: center;">Vår vision med loppisshoppis.....</h2>
+<h3 id="textCenter" style="text-align: center;">LoppisShoppis värnar om vår miljö.</h3>
 
-<p id="textCenter2" style="text-align: center;" >Vår butik värnar om miljö och produktsvinn</p>
+<p id="textCenter2" style="text-align: center;" ><br> Svenskarnas textilkonsumtion orsakar utsläpp på över fyra miljoner ton koldioxid per år. <br>
+  Det motsvarar 850 000 varv runt jorden med bil. <br>
+  <br>
+  Varje person i Sverige slänger i snitt 7,5 kg kläder varje år.
+  <br>
+  Hälften av de är hela och skulle kunna användas igen.<br>
+  <br>
+  Tänk om du kunde minska din klimatpåverkan och tjäna pengar - samtidigt! <br>
+  <br>
+   <h4 style="text-align: center;"> Med LoppisShoppis får kläder och prylar nytt liv. Och du får betalt för det du inte längre vill ha.</h4>
+</p>
 
 <div class="container" id="tree-container">
   <div class="zoom-in-out-box" id="imgtree" style="text-align: center;">
