--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -137,7 +137,7 @@
     <label for="password">Lösenord: </label>
     <input type="password" id="password" name="password">
     <input type="submit" class="btn btn-primary" value="Logga in">
-    <p type="text"><br> Är du inte medlem ännu?</p><br>
+    <p type="text"><br> Är du inte medlem ännu?</p>
     <a class="btn btn-primary " th:href="'/newuser'" >Skapa ny användare</a>
 </form>
     </div><br>
