--- a/src/main/resources/templates/newuser.html
+++ b/src/main/resources/templates/newuser.html
@@ -133,15 +133,20 @@
 <div class="page-header"><h1>Skapa ny användare</h1></div>
 
 <!-- New user -->
+<div class="container" id="newuser">
 <form action="/newuser" method="POST" th:object="${user}">
-    <table><div>
-        <th class="userInput"> Användarnamn: <input type="text" th:field="*{username}"/>
-        <p class="error" th:if="${#fields.hasErrors('username')}">Fyll i ett namn!</p></th>
-        <th class="userInput"> Lösenord:     <input type="password" th:field="*{password}"/>
+    <table>
+       <th class="userInput"> Användarnamn: <input type="text" th:field="*{username}"/>
+        <p class="error" th:if="${#fields.hasErrors('username')}">Fyll i ett namn!</p>
+        <th class="userInput"> &nbsp; Lösenord: <input type="password" th:field="*{password}"/>
         <p class="error" th:if="${#fields.hasErrors('password')}">Fyll i ett lösenord!</p></th>
-        <th class="userInput"> <input type="submit"/></th>
-    </div></table>
+    </table>
+    <br>
+    <input type="submit" class="btn btn-primary" value="Registrera mig!">
 </form>
+</div>
+    <br>
+
 
 <!-- Footer -->
 <footer>
