--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -132,14 +132,15 @@
 
 <div class="page-header"><h1>Mitt konto</h1></div>
 
-<div class="container">
+<div class="container" id="userpage">
     <div class="row">
         <div class="col-md-6">
-            <h2>Hej <th th:text="${session.siteuser.username}"></th>!</h2>
-            <a class="btn btn-primary" th:href="'/logoutuser'" >Logga ut</a>
+            <h2>Hej <th th:text="${session.siteuser.username}"></th>!</h2><br><br>
+            <a class="btn btn-primary" th:href="'/logoutuser'" >Logga ut</a><br>
         </div>
     </div>
 </div>
+<br>
 
 <!-- Footer -->
 <footer>
