--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -110,11 +110,20 @@
 
 <!-- Cart -->
 <div class="container">
-    <div class="fulllistofproducts">
-    </div>
+    <!--<div class="fulllistofproducts">
+    </div>-->
+    <table class="fulllistofproducts">
+        <tr>
+          <th> </th>
+          <th>Produkt</th>
+          <th>Pris</th>
+        </tr>
+    </table>
     <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="emptyCart()">Töm varukorgen</button>
     <a href="/checkout" class="btn btn-primary">Betala</a>
 </div>
+
+
 
 <!-- Footer -->
 <footer>
